[tool.poetry]
name = "bpp-supershow-overlay"
version = "0.1.0-alpha"
description = "Live stream overlay for Supershow card game matches"
authors = ["Brandon Arrendondo"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
keywords = ["supershow", "overlay", "streaming", "card-game", "mqtt"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^2.0.0"
requests = "^2.31.0"
toml = "^0.10.2"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.0"
types-requests = "^2.31.0"
types-toml = "^0.10.8"
ruff = "^0.4.3"
pre-commit = "^3.0.0"
xenon = "^0.9.0"
trove-classifiers = "^2025.12.1.14"

[tool.poetry.scripts]
bpp-controller = "src.controller.main:main"
bpp-sync = "src.shared.example_usage:main"
bpp-mqtt-test = "src.shared.example_mqtt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E722", # bare except (some legacy code needs this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "paho.mqtt.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
